# lxqt-panel

./: CMakeLists.txt
panel/: lxqtpanel.cpp
panel/config/: configpanelwidget.cpp
plugin-wingmenu/: CMakeLists.txt  applicationsview.cpp  applicationsview.h  common.h  itemdescriptiondelegate.cpp  itemdescriptiondelegate.h  wingmenuconfiguration.cpp  wingmenuconfiguration.h  wingmenuconfiguration.ui  wingmenuplugin.cpp  wingmenuplugin.h  wingmenuwidget.cpp  wingmenuwidget.h
